--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ input:not([type="checkbox"]) {
 }
 
 input[type="color"] {
-  -webkit-appearance: none;
+  appearance: none;
   border: none;
   height: 30px;
   padding: 0;
@@ -22,11 +22,26 @@ input[type="color"]::-webkit-color-swatch {
   border: none;
 }
 
+#parameter-config {
+  z-index: 1060;
+  position: sticky;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+}
+
 .overlay-button {
   position: absolute;
-  left: 0.5rem;
   bottom: 0.5rem;
   margin-bottom: 0.25rem !important;
+}
+
+#config-dropdown-btn {
+  left: 0.5rem;
+}
+#download-btn {
+  right: 0.5rem;
 }
 
 .config-item {
