--- a/styles.css
+++ b/styles.css
@@ -31,17 +31,14 @@ input[type="color"]::-webkit-color-swatch {
   left: 0;
 }
 
-.overlay-button {
+.overlay-btns {
   position: absolute;
   bottom: 0.5rem;
-  margin-bottom: 0.25rem !important;
-}
-
-#config-dropdown-btn {
-  left: 0.5rem;
-}
-#download-btn {
   right: 0.5rem;
+  left: 0.5rem;
+  margin-bottom: 0.25rem !important;
+  display: flex;
+  justify-content: space-between;
 }
 
 .config-item {
