--- a/styles.css
+++ b/styles.css
@@ -23,6 +23,26 @@ input[type="color"]::-webkit-color-swatch {
   border: none;
 }
 
+#credit {
+  position: relative;
+  bottom: 6px;
+  left: 0;
+  right: 0;
+}
+#credit a {
+  padding: 0.125rem 0.375rem 0.125rem;
+  color: rgba(255, 255, 255, 0.7);
+  z-index: 1061;
+  position: absolute;
+  display: inline-block;
+  background-color: rgba(255, 255, 255, 0.4);
+  right: 0;
+  bottom: 0;
+}
+#credit a:hover {
+  text-decoration: none;
+}
+
 #parameter-config {
   z-index: 1060;
   position: sticky;
@@ -39,7 +59,16 @@ input[type="color"]::-webkit-color-swatch {
   left: 0.5rem;
   margin-bottom: 0.25rem !important;
   display: flex;
-  justify-content: space-between;
+  justify-content: start;
+}
+.overlay-btns > button {
+  border-radius: 0;
+}
+.overlay-btns > button:first-child {
+  border-radius: 0.25rem 0 0 0.25rem;
+}
+.overlay-btns > button:last-child {
+  border-radius: 0 0.25rem 0.25rem 0;
 }
 
 canvas {
