Fixed internal datetime representation

--- a/public/styles.css
+++ b/public/styles.css
@@ -40,6 +40,7 @@ input[type="color"]::-webkit-color-swatch {
   right: 0;
 }
 #credit a {
+  border-top-left-radius: 0.25rem;
   padding: 0.125rem 0.375rem 0.125rem;
   color: rgba(255, 255, 255, 0.7);
   z-index: 1061;
