--- a/public/styles.css
+++ b/public/styles.css
@@ -21,6 +21,7 @@ select {
   font: inherit;
   font-size: inherit;
   padding: 0 0.5rem;
+  height: 1.75rem;
 }
 input:not([type="checkbox"]) {
   width: 11rem;
@@ -31,7 +32,6 @@ input[type="color"] {
 }
 
 input[type="color"] {
-  height: 1.75rem;
   padding: 0;
 }
 input[type="color"]::-webkit-color-swatch-wrapper {
@@ -132,10 +132,6 @@ canvas {
   width: 100%;
   height: 100%;
   image-rendering: pixelated;
-}
-
-.menu-offset {
-  margin-bottom: 0.4rem !important;
 }
 
 .config-item {
@@ -254,6 +250,9 @@ dialog {
     width: 100%;
     border-radius: 0;
   }
+  #cfg-outer > *:not(:first-child) {
+    margin-top: 1.5rem !important;
+  }
 
   .config-item {
     display: flex;
@@ -286,37 +285,36 @@ dialog form {
   color: var(--text-primary);
 }
 
-h1,
-#cfg-outer,
-dialog .dialog-actions {
-  max-width: 100%;
-  padding: 1rem 1.5rem;
-}
-
 h1 {
+  max-width: 100%;
+  padding: 1rem 1.5rem 0.75rem;
   margin: 0;
+  background-color: var(--bg-primary);
+  position: sticky;
+  top: 0;
+  border-bottom: 1px solid #6c757d;
 }
 
 #cfg-outer {
-  padding: 0.5rem 1.5rem 1rem;
+  max-width: 100%;
+  padding: 0.75rem 1.5rem 1rem;
   overflow-y: auto;
   display: flex;
   flex-direction: column;
 }
 
-#cfg-outer > * {
+#cfg-outer > *:not(:first-child) {
   margin-top: 1rem;
-}
-#cfg-outer > *:first-child {
-  margin-top: 0;
 }
 
 dialog .dialog-actions {
-  position: sticky;
+  border-top: 1px solid #6c757d;
+  max-width: 100%;
+  padding: 1rem 1.5rem;
   background-color: var(--bg-primary);
+  position: sticky;
   bottom: 0;
   display: flex;
   justify-content: space-between;
   flex-direction: row;
-  border-top: 1px solid #6c757d;
 }
