--- a/public/styles.css
+++ b/public/styles.css
@@ -31,6 +31,20 @@ input[type="color"] {
   width: 12rem;
 }
 
+.wrap-text {
+  max-width: 100%;
+  white-space: wrap;
+  word-wrap: break-word;
+  word-break: break-all;
+}
+
+select {
+  max-width: 100%;
+  overflow-x: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
 input[type="color"] {
   padding: 0;
 }
@@ -49,21 +63,30 @@ input[type="color"]::-webkit-color-swatch {
 }
 #credit a {
   border-top-left-radius: 0.25rem;
-  padding: 0.125rem 0.375rem 0.125rem;
+  padding: 0.125rem 0.375rem;
   color: rgba(255, 255, 255, 0.7);
-  z-index: 1061;
+  fill: rgba(255, 255, 255, 0.7);
+  z-index: 1;
+  text-decoration: none;
   position: absolute;
   display: inline-block;
   background-color: rgba(255, 255, 255, 0.4);
   right: 0;
   bottom: 0;
 }
-#credit a:hover {
-  text-decoration: none;
+#credit span {
+  border-bottom: 1px solid rgba(255, 255, 255, 0.7);
+}
+#credit svg {
+  margin-left: 0.15rem;
+  height: 0.8rem;
+}
+
+.icon {
+  height: 1em;
 }
 
 #parameter-config {
-  z-index: 1060;
   position: sticky;
   top: 0;
   right: 0;
@@ -145,6 +168,10 @@ canvas {
   border: 0;
 }
 
+.config-item label {
+  white-space: wrap;
+}
+
 .config-item table {
   border-radius: 0.5rem;
 }
@@ -181,14 +208,19 @@ canvas {
   display: flex;
   flex-direction: column;
 }
+
 .collection .heading {
-  margin: 0 1rem;
+  margin: 0 1rem 0.5rem;
   cursor: pointer;
   color: white;
   text-decoration: none !important;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+}
+
+.collection-label {
+  white-space: wrap;
 }
 
 .collection input:not([type="checkbox"]),
@@ -200,21 +232,42 @@ canvas {
   margin-left: 0;
 }
 
+.collection-container {
+  margin: 0 1rem;
+  max-width: calc(100% - 2rem);
+  overflow-x: auto;
+  position: relative;
+}
+
+.collection-content {
+  width: fit-content;
+}
+
 .collection-actions {
+  width: 100%;
   display: flex;
   justify-content: space-between;
   margin-top: 0.5rem;
+  gap: 0.5rem;
 }
 
 .collection table {
   width: 100%;
   background-color: var(--bg-primary);
   table-layout: fixed;
+  padding: 0.5rem;
 }
 
-.collection-content {
-  margin: 0.5rem 1rem 0;
-  transition: all 0.5s;
+.collection th {
+  width: 5rem;
+}
+.collection th.row-select {
+  width: 1rem;
+}
+
+.collection input[data-row-selector] {
+  min-width: 1rem !important;
+  text-align: end;
 }
 
 .collapsed .collection-content {
@@ -245,13 +298,32 @@ dialog {
   background-color: var(--bg-primary);
 }
 
+.width-narrow {
+  display: none;
+}
+.width-large {
+  display: initial;
+}
+
 @media (max-width: 440px) {
+  .width-narrow {
+    display: initial;
+  }
+  .width-large {
+    display: none;
+  }
+
   dialog {
     width: 100%;
     border-radius: 0;
   }
   #cfg-outer > *:not(:first-child) {
     margin-top: 1.5rem !important;
+  }
+
+  .collection-actions {
+    position: sticky;
+    left: 0;
   }
 
   .config-item {
@@ -268,13 +340,25 @@ dialog {
   .config-item input[type="checkbox"] {
     width: fit-content;
   }
+  .config-item .collection input[type="checkbox"] {
+    width: unset;
+    min-width: 3rem;
+  }
+  .dialog-actions {
+    font-size: 1.5rem;
+  }
+}
+
+@media (max-width: 305px) {
+  .collection-actions {
+    width: fit-content;
+  }
 }
 
 dialog::backdrop {
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 1040;
   width: 100vw;
   height: 100vh;
   background-color: black;
@@ -293,6 +377,7 @@ h1 {
   position: sticky;
   top: 0;
   border-bottom: 1px solid #6c757d;
+  z-index: 1;
 }
 
 #cfg-outer {
@@ -307,7 +392,7 @@ h1 {
   margin-top: 1rem;
 }
 
-dialog .dialog-actions {
+.dialog-actions {
   border-top: 1px solid #6c757d;
   max-width: 100%;
   padding: 1rem 1.5rem;
