--- a/public/styles.css
+++ b/public/styles.css
@@ -371,6 +371,7 @@ dialog form {
 
 h1 {
   max-width: 100%;
+  height: 1.5rem;
   padding: 1rem 1.5rem 0.75rem;
   margin: 0;
   background-color: var(--bg-primary);
@@ -382,6 +383,7 @@ h1 {
 
 #cfg-outer {
   max-width: 100%;
+  max-height: calc(100vh - 13rem);
   padding: 0.75rem 1.5rem 1rem;
   overflow-y: auto;
   display: flex;
@@ -395,6 +397,7 @@ h1 {
 .dialog-actions {
   border-top: 1px solid #6c757d;
   max-width: 100%;
+  height: 2.1rem;
   padding: 1rem 1.5rem;
   background-color: var(--bg-primary);
   position: sticky;
