--- a/packages/app/public/styles.css
+++ b/packages/app/public/styles.css
@@ -235,6 +235,8 @@ canvas {
 .collection input:not([type="checkbox"]),
 .collection select {
   width: 5rem;
+  min-width: 5rem;
+  max-width: 5rem;
   margin-left: 0;
 }
 .collection input[type="checkbox"] {
