Added a fullscreen button

--- a/packages/app/public/styles.css
+++ b/packages/app/public/styles.css
@@ -63,6 +63,20 @@ input[type="color"]::-webkit-color-swatch {
   border: none;
 }
 
+.when-fullscreen {
+  display: none;
+}
+.fullscreen .when-fullscreen {
+  display: initial;
+}
+
+.when-not-fullscreen {
+  display: initial;
+}
+.fullscreen .when-not-fullscreen {
+  display: none;
+}
+
 #credit {
   position: relative;
   bottom: 6px;
